--- a/Cafeine/Cafeine.csproj
+++ b/Cafeine/Cafeine.csproj
@@ -109,6 +109,7 @@
     <Compile Include="Services\AniListApi.cs" />
     <Compile Include="Services\Database.cs" />
     <Compile Include="Services\ImageCache.cs" />
+    <Compile Include="Services\IService.cs" />
     <Compile Include="Services\KitsuApi.cs" />
     <Compile Include="Services\MyAnimeListApi.cs" />
     <Compile Include="ViewModels\BrowserAuthenticationViewModel.cs" />
@@ -223,30 +224,30 @@
       <Version>4.1.4</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Net.Native.Compiler">
-      <Version>2.2.0-rel-26924-01</Version>
+      <Version>2.2.1</Version>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
-      <Version>6.1.9</Version>
+      <Version>6.2.2</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Xaml.Behaviors.Uwp.Managed">
       <Version>2.0.0</Version>
     </PackageReference>
-    <PackageReference Include="NetJSON">
-      <Version>1.2.7</Version>
-    </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
       <Version>11.0.2</Version>
-    </PackageReference>
-    <PackageReference Include="Prism.Core">
-      <Version>7.1.0.431</Version>
     </PackageReference>
     <PackageReference Include="Prism.Unity.Windows">
       <Version>7.0.0.336-pre</Version>
     </PackageReference>
+    <PackageReference Include="Prism.Windows">
+      <Version>7.0.0.336-pre</Version>
+    </PackageReference>
     <PackageReference Include="ReactiveProperty">
       <Version>5.3.0</Version>
+    </PackageReference>
+    <PackageReference Include="System.Runtime.CompilerServices.Unsafe">
+      <Version>4.5.2</Version>
     </PackageReference>
     <PackageReference Include="Win2D.uwp">
       <Version>1.23.0</Version>
