--- a/Cafeine/Cafeine.csproj
+++ b/Cafeine/Cafeine.csproj
@@ -220,6 +220,9 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="DBreeze">
+      <Version>1.92.0</Version>
+    </PackageReference>
     <PackageReference Include="LiteDB">
       <Version>4.1.4</Version>
     </PackageReference>
