[Fix] Database is created everytime the user open the app
[Add] Template for offline results in search page

[Add] seasons property in useritem

[Add] seasons enum

[Add] userstatus int to string

[Change] Cleanup some unused code

--- a/Cafeine/Cafeine.csproj
+++ b/Cafeine/Cafeine.csproj
@@ -108,6 +108,7 @@
     <Compile Include="Models\Enums\MediaFormatEnum.cs" />
     <Compile Include="Models\Enums\MediaTypeEnum.cs" />
     <Compile Include="Models\Enums\ScoreFormatEnum.cs" />
+    <Compile Include="Models\Enums\SeasonsEnum.cs" />
     <Compile Include="Models\Enums\ServiceType.cs" />
     <Compile Include="Models\Enums\StatusEnum.cs" />
     <Compile Include="Models\ItemLibraryModel.cs" />
