--- a/Cafeine/Cafeine.csproj
+++ b/Cafeine/Cafeine.csproj
@@ -119,6 +119,11 @@
     <Compile Include="Services\ImageCache.cs" />
     <Compile Include="Services\IService.cs" />
     <Compile Include="Services\KitsuApi.cs" />
+    <Compile Include="Services\Mvvm\BasePage.cs" />
+    <Compile Include="Services\Mvvm\IViewModel.cs" />
+    <Compile Include="Services\Mvvm\NavigationService.cs" />
+    <Compile Include="Services\Mvvm\ViewModelBase.cs" />
+    <Compile Include="Services\Mvvm\ViewModelLink.cs" />
     <Compile Include="Services\MyAnimeListApi.cs" />
     <Compile Include="ViewModels\BrowserAuthenticationViewModel.cs" />
     <Compile Include="ViewModels\HomePageViewModel.cs" />
@@ -258,12 +263,6 @@
     <PackageReference Include="Newtonsoft.Json">
       <Version>12.0.1</Version>
     </PackageReference>
-    <PackageReference Include="Prism.Unity.Windows">
-      <Version>7.0.0.336-pre</Version>
-    </PackageReference>
-    <PackageReference Include="Prism.Windows">
-      <Version>7.0.0.336-pre</Version>
-    </PackageReference>
     <PackageReference Include="ReactiveProperty">
       <Version>5.3.2</Version>
     </PackageReference>
@@ -271,6 +270,7 @@
       <Version>1.23.0</Version>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
