--- a/Cafeine/Cafeine.csproj
+++ b/Cafeine/Cafeine.csproj
@@ -158,6 +158,7 @@
     <AppxManifest Include="Package.appxmanifest">
       <SubType>Designer</SubType>
     </AppxManifest>
+    <Content Include="Assets\Font\Cuprum-Bold.ttf" />
     <None Include="Cafeine_StoreKey.pfx" />
     <None Include="Cafeine_TemporaryKey.pfx" />
   </ItemGroup>
