--- a/Cafeine/Cafeine.csproj
+++ b/Cafeine/Cafeine.csproj
@@ -21,7 +21,7 @@
     <PackageCertificateThumbprint>6588D7311DAC4B45CF287643E82F74E8EFC41BBB</PackageCertificateThumbprint>
     <GenerateAppInstallerFile>False</GenerateAppInstallerFile>
     <AppxAutoIncrementPackageRevision>False</AppxAutoIncrementPackageRevision>
-    <AppxBundle>Never</AppxBundle>
+    <AppxBundle>Always</AppxBundle>
     <AppInstallerUpdateFrequency>1</AppInstallerUpdateFrequency>
     <AppInstallerCheckForUpdateFrequency>OnApplicationRun</AppInstallerCheckForUpdateFrequency>
     <AppxSymbolPackageEnabled>False</AppxSymbolPackageEnabled>
@@ -105,9 +105,6 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="Models\CafeineProperty.cs" />
-    <Compile Include="Models\Conversions\ItemClickToItemLibraryModel.cs" />
-    <Compile Include="Models\Conversions\SelectedIndexToIntConversion.cs" />
-    <Compile Include="Models\Conversions\SuggestionChosenToItemLibraryModel.cs" />
     <Compile Include="Models\Enums\MediaFormatEnum.cs" />
     <Compile Include="Models\Enums\MediaTypeEnum.cs" />
     <Compile Include="Models\Enums\ScoreFormatEnum.cs" />
@@ -269,9 +266,6 @@
     </PackageReference>
     <PackageReference Include="Microsoft.UI.Xaml">
       <Version>2.0.181011001</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.Xaml.Behaviors.Uwp.Managed">
-      <Version>2.0.0</Version>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
       <Version>12.0.1</Version>
