--- a/Cafeine/Cafeine.csproj
+++ b/Cafeine/Cafeine.csproj
@@ -128,11 +128,11 @@
     <Compile Include="Services\MyAnimeListApi.cs" />
     <Compile Include="Services\CafeineScheduler.cs" />
     <Compile Include="ViewModels\BrowserAuthenticationViewModel.cs" />
-    <Compile Include="ViewModels\HomePageViewModel.cs" />
-    <Compile Include="ViewModels\ItemDetailsPageViewModel.cs" />
-    <Compile Include="ViewModels\LoginPageViewModel.cs" />
-    <Compile Include="ViewModels\MainPageViewModel.cs" />
-    <Compile Include="ViewModels\SearchPageViewModel.cs" />
+    <Compile Include="ViewModels\HomeViewModel.cs" />
+    <Compile Include="ViewModels\ItemDetailsViewModel.cs" />
+    <Compile Include="ViewModels\LoginViewModel.cs" />
+    <Compile Include="ViewModels\MainViewModel.cs" />
+    <Compile Include="ViewModels\SearchViewModel.cs" />
     <Compile Include="Views\BrowserAuthenticationPage.xaml.cs">
       <DependentUpon>BrowserAuthenticationPage.xaml</DependentUpon>
     </Compile>
@@ -255,24 +255,24 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="DBreeze">
-      <Version>1.92.0</Version>
+      <Version>1.93.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Net.Native.Compiler">
-      <Version>2.2.1</Version>
+      <Version>2.2.3</Version>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
-      <Version>6.2.3</Version>
+      <Version>6.2.8</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.UI.Xaml">
-      <Version>2.0.181011001</Version>
+      <Version>2.1.190405004.1</Version>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
-      <Version>12.0.1</Version>
+      <Version>12.0.2</Version>
     </PackageReference>
     <PackageReference Include="ReactiveProperty">
-      <Version>5.3.2</Version>
+      <Version>5.4.0</Version>
     </PackageReference>
     <PackageReference Include="Win2D.uwp">
       <Version>1.23.0</Version>
