Fix Online Item details not showing up when going back

--- a/Cafeine/Cafeine.csproj
+++ b/Cafeine/Cafeine.csproj
@@ -114,19 +114,20 @@
     <Compile Include="Models\ItemLibraryModel.cs" />
     <Compile Include="Models\UserCredentialsModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\AniListApi.cs" />
+    <Compile Include="Services\Api\AniListApi.cs" />
     <Compile Include="Services\Database.cs" />
     <Compile Include="Services\ImageCache.cs" />
     <Compile Include="Services\IService.cs" />
     <Compile Include="Services\ItemLibraryListComparer.cs" />
-    <Compile Include="Services\KitsuApi.cs" />
+    <Compile Include="Services\Api\KitsuApi.cs" />
+    <Compile Include="Services\ItemLibraryService.cs" />
     <Compile Include="Services\Mvvm\BasePage.cs" />
     <Compile Include="Services\Mvvm\CafeineCommand.cs" />
     <Compile Include="Services\Mvvm\IViewModel.cs" />
     <Compile Include="Services\Mvvm\NavigationService.cs" />
     <Compile Include="Services\Mvvm\ViewModelBase.cs" />
     <Compile Include="Services\Mvvm\ViewModelLink.cs" />
-    <Compile Include="Services\MyAnimeListApi.cs" />
+    <Compile Include="Services\Api\MyAnimeListApi.cs" />
     <Compile Include="Services\CafeineScheduler.cs" />
     <Compile Include="ViewModels\BrowserAuthenticationViewModel.cs" />
     <Compile Include="ViewModels\HomeViewModel.cs" />
