--- a/Cafeine/Cafeine.csproj
+++ b/Cafeine/Cafeine.csproj
@@ -116,6 +116,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\Api\AniListApi.cs" />
     <Compile Include="Services\Database.cs" />
+    <Compile Include="Services\Exception\NetworkOfflineException.cs" />
     <Compile Include="Services\ImageCache.cs" />
     <Compile Include="Services\IService.cs" />
     <Compile Include="Services\ItemLibraryListComparer.cs" />
@@ -259,6 +260,9 @@
     <PackageReference Include="DBreeze">
       <Version>1.93.0</Version>
     </PackageReference>
+    <PackageReference Include="Fastenshtein">
+      <Version>1.0.0.5</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.Net.Native.Compiler">
       <Version>2.2.3</Version>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
@@ -268,7 +272,7 @@
       <Version>6.2.8</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.UI.Xaml">
-      <Version>2.1.190405004.1</Version>
+      <Version>2.1.190405004.2</Version>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
       <Version>12.0.2</Version>
