--- a/Cafeine/Cafeine.csproj
+++ b/Cafeine/Cafeine.csproj
@@ -104,38 +104,19 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Models\CafeineProperty.cs" />
-    <Compile Include="Models\Enums\MediaFormatEnum.cs" />
-    <Compile Include="Models\Enums\MediaTypeEnum.cs" />
-    <Compile Include="Models\Enums\ScoreFormatEnum.cs" />
-    <Compile Include="Models\Enums\SeasonsEnum.cs" />
-    <Compile Include="Models\Enums\ServiceType.cs" />
-    <Compile Include="Models\Enums\StatusEnum.cs" />
-    <Compile Include="Models\ItemLibraryModel.cs" />
-    <Compile Include="Models\UserCredentialsModel.cs" />
+    <Compile Include="Mvvm\BasePage.cs" />
+    <Compile Include="Mvvm\CafeineCommand.cs" />
+    <Compile Include="Mvvm\ViewModelLink.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\Api\AniListApi.cs" />
-    <Compile Include="Services\Database.cs" />
-    <Compile Include="Services\Exception\NetworkOfflineException.cs" />
-    <Compile Include="Services\ImageCache.cs" />
-    <Compile Include="Services\IService.cs" />
-    <Compile Include="Services\ServiceItemComparer.cs" />
-    <Compile Include="Services\Api\KitsuApi.cs" />
-    <Compile Include="Services\ItemLibraryService.cs" />
-    <Compile Include="Services\Mvvm\BasePage.cs" />
-    <Compile Include="Services\Mvvm\CafeineCommand.cs" />
-    <Compile Include="Services\Mvvm\IViewModel.cs" />
-    <Compile Include="Services\Mvvm\NavigationService.cs" />
-    <Compile Include="Services\Mvvm\ViewModelBase.cs" />
-    <Compile Include="Services\Mvvm\ViewModelLink.cs" />
-    <Compile Include="Services\Api\MyAnimeListApi.cs" />
-    <Compile Include="Services\CafeineScheduler.cs" />
+    <Compile Include="Mvvm\IViewModel.cs" />
+    <Compile Include="Mvvm\NavigationService.cs" />
     <Compile Include="ViewModels\BrowserAuthenticationViewModel.cs" />
     <Compile Include="ViewModels\HomeViewModel.cs" />
     <Compile Include="ViewModels\ItemDetailsViewModel.cs" />
     <Compile Include="ViewModels\LoginViewModel.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
     <Compile Include="ViewModels\SearchViewModel.cs" />
+    <Compile Include="Mvvm\ViewModelBase.cs" />
     <Compile Include="ViewModels\Wizard\OfflineItemWizardViewModel.cs" />
     <Compile Include="Views\BrowserAuthenticationPage.xaml.cs">
       <DependentUpon>BrowserAuthenticationPage.xaml</DependentUpon>
@@ -157,6 +138,9 @@
     </Compile>
     <Compile Include="Views\SearchPage.xaml.cs">
       <DependentUpon>SearchPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Wizard\BrowseButton.xaml.cs">
+      <DependentUpon>BrowseButton.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\Wizard\EpisodeListControl.xaml.cs">
       <DependentUpon>EpisodeListControl.xaml</DependentUpon>
@@ -266,6 +250,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Views\Wizard\BrowseButton.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\Wizard\EpisodeListControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -301,6 +289,7 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup />
+  <Import Project="..\Cafeine.Shared\Cafeine.Shared.projitems" Label="Shared" />
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
