--- a/Cafeine.Tests/Cafeine.Tests.csproj
+++ b/Cafeine.Tests/Cafeine.Tests.csproj
@@ -118,6 +118,7 @@
     <SDKReference Include="TestPlatform.Universal, Version=$(UnitTestPlatformVersion)" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ExtCafFilenameParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnitTestApp.xaml.cs">
       <DependentUpon>UnitTestApp.xaml</DependentUpon>
@@ -148,6 +149,9 @@
   <ItemGroup>
     <PackageReference Include="DBreeze">
       <Version>1.93.0</Version>
+    </PackageReference>
+    <PackageReference Include="Fastenshtein">
+      <Version>1.0.0.5</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.2.8</Version>
