--- a/Cafeine/Cafeine.csproj
+++ b/Cafeine/Cafeine.csproj
@@ -142,6 +142,9 @@
     <Compile Include="Views\Resources\CafeineTemplateDesign.xaml.cs">
       <DependentUpon>CafeineTemplateDesign.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\Resources\ItemDetailsList.xaml.cs">
+      <DependentUpon>ItemDetailsList.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\SearchPage.xaml.cs">
       <DependentUpon>SearchPage.xaml</DependentUpon>
     </Compile>
@@ -252,6 +255,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Page Include="Views\Resources\ItemDetailsList.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\SearchPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -295,6 +302,9 @@
     </PackageReference>
     <PackageReference Include="System.Memory">
       <Version>4.5.3</Version>
+    </PackageReference>
+    <PackageReference Include="UwpDesignTimeData">
+      <Version>1.1.0</Version>
     </PackageReference>
     <PackageReference Include="Win2D.uwp">
       <Version>1.23.0</Version>
